modified:   .sitepins/schema/authors.json 	modified:   LICENSE 	modified:   package.json 	modified:   public/images/logo-darkmode.png 	new file:   public/images/logo-darkmode2.png 	modified:   public/images/logo.png 	new file:   public/images/logo2.png 	new file:   public/images/mapa.png 	new file:   public/images/placeholder2.png 	new file:   public/images/placeholder3.png 	modified:   readme.md 	modified:   src/config/config.json 	modified:   src/config/menu.json 	modified:   src/content.config.ts 	deleted:    src/content/authors/-index.md 	deleted:    src/content/authors/sam-wilson.md 	deleted:    src/content/authors/william-jacob.md 	modified:   src/content/blog/-index.md 	deleted:    src/content/blog/post-2.md 	deleted:    src/content/blog/post-3.md 	deleted:    src/content/blog/post-4.md 	modified:   src/content/homepage/-index.md 	modified:   src/content/pages/privacy-policy.md 	modified:   src/content/sections/call-to-action.md 	modified:   src/content/sections/testimonial.md 	new file:   src/content/team/-index.md 	renamed:    src/content/authors/john-doe.md -> src/content/team/john-doe.md 	modified:   src/layouts/PostSingle.astro 	modified:   src/layouts/components/AuthorCard.astro 	modified:   src/layouts/components/BlogCard.astro 	renamed:    src/pages/authors/[single].astro -> src/pages/team/[single].astro 	renamed:    src/pages/authors/index.astro -> src/pages/team/index.astro

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -23,20 +23,20 @@
   },
 
   "announcement": {
-    "enable": true,
-    "content": "<span class='text-center block'>♥️ Loving Astroplate? <a class='underline' href='https://github.com/zeon-studio/astroplate' target='_blank' rel='noopener'>Please ⭐️ on Github</a></span>",
+    "enable": false,
+    "content": "<span class='text-center block'>♥️ Salut! <a class='underline' href='https://google.com' target='_blank' rel='noopener'>Link⭐️ </a></span>",
     "expire_days": 7
   },
 
   "params": {
     "contact_form_action": "#",
-    "copyright": "Designed And Developed by [Zeon Studio](https://zeon.studio)"
+    "copyright": "© Euro Asia Education 2026."
   },
 
   "navigation_button": {
-    "enable": true,
+    "enable": false,
     "label": "Get Started",
-    "link": "https://github.com/zeon-studio/astroplate"
+    "link": "--"
   },
 
   "google_tag_manager": {
@@ -51,8 +51,8 @@
   },
 
   "metadata": {
-    "meta_author": "zeon.studio",
+    "meta_author": "E.A.E.",
     "meta_image": "/images/og-image.png",
-    "meta_description": "astro and tailwind boilerplate"
+    "meta_description": "EURO ASIA EDUCATION"
   }
 }
