--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "astroplate",
-  "version": "5.11.0",
+  "name": "EAE",
+  "version": "1",
   "description": "Astro and Tailwindcss boilerplate",
-  "author": "zeon.studio",
+  "author": "...",
   "license": "MIT",
   "packageManager": "yarn@1.22.22",
   "type": "module",
